--- a/EmployeeWeb/appsettings.json
+++ b/EmployeeWeb/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiSettings": {
+    "EmployeeApiBaseUrl": "http://hub.dummyapis.com/employee",
+    "EmployeeByIdUrl": "http://hub.dummyapis.com/employee?noofRecords=1&idStarts="
+  },
   "AllowedHosts": "*"
 }
